fix(App.module.scss): added overflow-x on width < 1024px

--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -5,4 +5,5 @@
   align-content: space-around;
   min-height: 100vh;
   width: 100%;
+  min-width: 1024px;
 }
